génération de json en base64 pour les tracés